--- a/hello_fcgi/build.gradle
+++ b/hello_fcgi/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 dependencies {
     implementation group: 'com.github.jnr', name: 'jnr-unixsocket', version: '0.38.1'
+    implementation group: 'org.graalvm.sdk', name: 'graal-sdk', version: '20.2.0'
 }
 
 task deploy(type: Copy) {
@@ -22,8 +23,8 @@ task deploy(type: Copy) {
 
 nativeImage {
   graalVmHome = System.getProperty('java.home')
-  mainClass = 'org.ethelred.experiments.HelloFCGI'
-  executableName = 'hello_java.fcgi'
+  mainClass = 'org.ethelred.experiments.graal.HelloGraal'
+  executableName = 'hello_graal.fcgi'
   outputDirectory = file("$buildDir/bin")
   arguments(
       '--no-fallback',
