making native build --static makes it work on Dreamhostssh oa Though I'm not sure what it does for file sizes

--- a/hello_cgi/build.gradle
+++ b/hello_cgi/build.gradle
@@ -25,7 +25,8 @@ nativeImage {
       '--no-fallback',
       '--report-unsupported-elements-at-runtime',
       '--verbose',
-      '-J-Xmx4G'
+      '-J-Xmx4G',
+      '--static'
   )
 }
 
